# dataquest-2026

./: .gitignore  README.md  discharge_disposition.csv  pyproject.toml  run-jupyter.sh
.ipynb_checkpoints/: main-checkpoint.py
01_preprocessing/: 01_analysis.ipynb  01_analyze.ipynb  02_clean.ipynb  02_cleaning.ipynb  03-split.ipynb  data.parquet
01_preprocessing/.ipynb_checkpoints/: 01_analysis-checkpoint.ipynb  01_analyze-checkpoint.ipynb  02_clean-checkpoint.ipynb  02_cleaning-checkpoint.ipynb
02.5_dim_reduction/: 01_PCA.ipynb
02_splitting/: 01_split.ipynb
02_splitting/.ipynb_checkpoints/: 01_split-checkpoint.ipynb
03_training/: DEMO.ipynb  DEMO_improved.ipynb  knn.ipynb  logreg.ipynb  randomforest.ipynb  svc.ipynb  xgboost.ipynb
Data/: dev.parquet  test.parquet
data/: .~lock.data_cleaned.csv#  data_cleaned.parquet  dev.parquet  test.parquet  train.parquet  val.parquet
data/processed/: test.parquet  train.parquet
data/scaled/: X_dev.parquet  X_test.parquet  X_train.parquet  X_val.parquet  y_dev.parquet  y_test.parquet  y_train.parquet  y_val.parquet
